# simple-audio-player

./: AudioManager.c  AudioManager.h  CMakeLists.txt  README.md  animator.c  animator.h  audioex.c  audiomanager.c  audiomanager.h  ccmp.bash  globals.c  icon.rc  main.c  musicbar.c  smp.c  smp.h  vcpkg.json  volumebar.c
include/: animator.h  audiomanager.h  globals.h  musicbar.h  smp.h  volumebar.h
